--- a/MovieQuiz/Presentation/Base.lproj/Main.storyboard
+++ b/MovieQuiz/Presentation/Base.lproj/Main.storyboard
@@ -99,17 +99,23 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="ajd-yi-1w1">
+                                <rect key="frame" x="205" y="456" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="YP Black"/>
                         <constraints>
+                            <constraint firstItem="ajd-yi-1w1" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="1tM-Dn-E87"/>
                             <constraint firstItem="YRl-w3-BOz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="52P-JF-aKM"/>
                             <constraint firstItem="YRl-w3-BOz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="7d5-2a-eEY"/>
+                            <constraint firstItem="ajd-yi-1w1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BBP-ZA-e8y"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="YRl-w3-BOz" secondAttribute="bottom" id="r79-lp-dtV"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YRl-w3-BOz" secondAttribute="trailing" constant="20" id="rGv-LU-lpC"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="ajd-yi-1w1" id="cmE-K2-Peg"/>
                         <outlet property="counterLable" destination="CTZ-ha-15E" id="Brk-RF-tA5"/>
                         <outlet property="imageView" destination="FRs-bd-CCJ" id="wnE-cV-u1M"/>
                         <outlet property="noButton" destination="KtG-CN-qoU" id="YeP-1M-q4R"/>
